--- a/index.html
+++ b/index.html
@@ -1,17 +1,55 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>breakpoints comunes</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>breakpoints comunes</title>
 </head>
 <body>
-    <header>
-        <p class="header__elemento">Elemento</p>
+  <header>
     
-    </header>
-    <main></main>
+    <button class="menu__toggle" id="menu-toggle" aria-label="Abrir menú">☰</button>
 
+    <nav class="header__nav" id="nav">
+      <ul class="header__ul">
+        <li class="header__li">Home</li>
+        <li class="header__li">Portfolio</li>
+        <li class="header__li">About me</li>
+        <li class="header__li">Contact</li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <p class="header__elemento">Elemento</p>
+  </main>
+
+  <script>
+    const toggle = document.getElementById("menu-toggle");
+    const nav = document.getElementById("nav");
+
+    toggle.addEventListener("click", () => {
+      nav.classList.toggle("active");
+      // Cambiar icono
+      toggle.textContent = nav.classList.contains("active") ? "✕" : "☰";
+    });
+
+   
+    const menuItems = document.querySelectorAll(".header__li");
+    menuItems.forEach(item => {
+      item.addEventListener("click", () => {
+        nav.classList.remove("active");
+        toggle.textContent = "☰";
+      });
+    });
+
+    
+    document.addEventListener("click", (e) => {
+      if (!nav.contains(e.target) && !toggle.contains(e.target)) {
+        nav.classList.remove("active");
+        toggle.textContent = "☰";
+      }
+    });
+  </script>
 </body>
 </html>
