--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/trajeta.css">
   <title>breakpoints comunes</title>
 </head>
 <body>
@@ -22,6 +23,51 @@
 
   <main>
     <p class="header__elemento">Elemento</p>
+<div class="container">
+
+    <section class="tarjeta">
+      <img src="img/fo.png" alt="" class="tarjeta__img">
+      <div class="tarjeta__information">
+        <h2 class="tarjeta__h2">Characther</h2>
+      <p class="tarjeta__p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi nemo ducimus cupiditate eum esse omnis quasi voluptates veniam dolorum tempore doloribus id ipsum, quidem corporis alias sint libero nobis aliquid.</p>      
+</div>
+</section>
+      
+
+
+    <section class="tarjeta">
+      <img src="img/kid7.png" alt="" class="tarjeta__img">
+      <h2 class="tarjeta__h2">Dragon</h2>
+      <p class="tarjeta__p"></p>      
+</section>
+
+    <section class="tarjeta">
+      <img src="img/kid10.png" alt="" class="tarjeta__img">
+      <h2 class="tarjeta__h2">Dragon_01</h2>
+      <p class="tarjeta__p"></p>      
+</section>
+
+    <section class="tarjeta">
+      <img src="img/snake.png" class="tarjeta__img">
+      <h2 class="tarjeta__h2">Snake</h2>
+      <p class="tarjeta__p"></p>      
+</section>
+
+    <section class="tarjeta">
+      <img src="img/sanke.png" alt="" class="tarjeta__img">
+      <h2 class="tarjeta__h2">Snake01</h2>
+      <p class="tarjeta__p"></p>      
+</section>
+
+    <section class="tarjeta">
+      <img src="img/Sin título.png" alt="" class="tarjeta__img">
+      <h2 class="tarjeta__h2">Doggy</h2>
+      <p class="tarjeta__p"></p>      
+</section>
+
+
+
+</div>
   </main>
 
   <script>
