.Integra un formulario que se reorganice visualmente según el dispositivo. Combina media queries con unidades relativas (em/rem).

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <section class="tarjeta">
       <img src="img/fo.png" alt="" class="tarjeta__img">
-      <div class="tarjeta__information">
+     
         <h2 class="tarjeta__h2">Characther</h2>
-      <p class="tarjeta__p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi nemo ducimus cupiditate eum esse omnis quasi voluptates veniam dolorum tempore doloribus id ipsum, quidem corporis alias sint libero nobis aliquid.</p>      
-</div>
+      <p class="tarjeta__p"></p>      
+
 </section>
       
 
@@ -65,6 +65,24 @@
       <p class="tarjeta__p"></p>      
 </section>
 
+<section>
+<form class="formulario">
+  <label for="nombre">Nombre</label>
+  <input type="text" id="nombre" class="form__input">
+
+  <label for="apellido">Apellido</label>
+  <input type="text" id="apellido" class="form__input">
+
+  <label for="email">Email</label>
+  <input type="email" id="email" class="form__input">
+
+  <label for="mensaje">Mensaje</label>
+  <textarea id="mensaje" class="form__input"></textarea>
+
+  <button type="submit" class="form__btn">Enviar</button>
+</form>
+
+</section>
 
 
 </div>
