--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    
+   
     <button class="menu__toggle" id="menu-toggle" aria-label="Abrir menú">☰</button>
 
     <nav class="header__nav" id="nav">
@@ -19,6 +19,7 @@
         <li class="header__li">Contact</li>
       </ul>
     </nav>
+     <div class="header__img"></div>
   </header>
 
   <main>
